# url-shrinker

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  shrinker.py
.github/workflows/: ci.yml
alembic/: .env.example  env.py
alembic/versions/: 954ad3dc9629_create_links_table.py  a5e0be13c24c_add_clicks_table_for_analytics.py  d947d8a03b64_create_users_table.py
app/: auth.py  cache.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  tasks.py  utils.py
app/routers/: auth.py  links.py
